--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (min-width: 992px) {
+  .canwidth {
+    width: 100% !important;
+  }
+  .brandrow div{
+    height: 6em;
+    margin: 1em;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 992px) {
+  .icon-w {
+    width: 100% !important;
   }
-  to {
-    transform: rotate(360deg);
+  .brandrow div{
+    height: 6em;
+    margin: 1em;
   }
 }
+.bg-img{
+  background: url(./img/Imges/discount-banner-1.jpg);
+min-height: 200px;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+.animation{
+  animation-name: Bounce;
+  animation-duration: 2s;
+  position: relative;
+  animation-timing-function: ease-in;
+  top: 0px;
+}
+@keyframes Bounce {
+  from {top: -350px;}
+  to {top:0}
+}
+.ButtonAnim{
+  left: 0;
+  right: 0;
+  margin: auto;
+  top:61px;
+ text-align: center;
+    position: absolute;
+    display: flex;
+    gap: 1em;
+}
+.card-body:hover .ButtonAnim{
+ 
+  top: -4px;
+  transition: 0.2s ease-in;
+}
+.text-decoration a{
+  text-decoration: none;
+  margin-bottom: 1em;
+  color:rgba(0,0,0,.5)!important ;
+}
+.card-bg{
+  background: url(../src/img/Imges/section-category-1.jpg);
+background: no repeat;
+}
+.accordion-header button{
+  background: #FFC107;
+  height: 50px;
+}
+.navbar-nav a.active{
+  font-weight: 600;
+  color: #212529 !important;
+}
+
+.login_form .form-floating .form-control {
+  height: 46px;
+  min-height: 46px;
+  
+}
+.login_form .form-floating label{
+padding: 0.6rem 0.7rem;
+}
+.btn-12:active{
+  transform: scale(0.7);
+  transition: 1000ms;
+}
+.sidebar div a{
+  text-decoration: none;
+  color: rgba(0, 0, 0, .5);
+}
+.icon-w button::after{
+  margin-top: 10px;
+}
+
+
+
